// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > renders default as expected 1`] = `
<div>
  <div
    class="card flex flex-col items-start "
  >
    <div
      class="card__image-container w-[323px] h-[223px] mb-3"
    >
      <img
        alt="John Doe"
        class="card__image size-full object-cover rounded-2xl "
        src="/images/team/member.jpg"
      />
    </div>
    <div
      class="card__content flex flex-col gap-8 w-full"
    >
      <div
        class="card__text"
      >
        <h2
          class="card__title text-2xl font-semibold text-bluedot-darker"
        >
          John Doe
        </h2>
        <p
          class="card__subtitle text-base text-black"
        >
          Developer
        </p>
      </div>
      <a
        class="cta-button flex items-center justify-center rounded-lg transition-all duration-200 font-semibold text-base px-4 py-2 w-fit cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter"
        data-testid="cta-link"
        href="https://linkedin.com/in/johndoe"
      >
        <span
          class="cta-button__text"
        >
          LinkedIn
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Card > renders with custom className 1`] = `
<div>
  <div
    class="card flex flex-col items-start custom-class"
  >
    <div
      class="card__image-container w-[323px] h-[223px] mb-3"
    >
      <img
        alt="John Doe"
        class="card__image size-full object-cover rounded-2xl "
        src="/images/team/member.jpg"
      />
    </div>
    <div
      class="card__content flex flex-col gap-8 w-full"
    >
      <div
        class="card__text"
      >
        <h2
          class="card__title text-2xl font-semibold text-bluedot-darker"
        >
          John Doe
        </h2>
        <p
          class="card__subtitle text-base text-black"
        >
          Developer
        </p>
      </div>
      <a
        class="cta-button flex items-center justify-center rounded-lg transition-all duration-200 font-semibold text-base px-4 py-2 w-fit cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter"
        data-testid="cta-link"
        href="https://linkedin.com/in/johndoe"
      >
        <span
          class="cta-button__text"
        >
          LinkedIn
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`Card > renders with custom image dimensions 1`] = `
<div>
  <div
    class="card flex flex-col items-start "
  >
    <div
      class="card__image-container w-[323px] h-[223px] mb-3"
    >
      <img
        alt="John Doe"
        class="card__image size-full object-cover rounded-2xl "
        src="/images/team/custom-size.jpg"
      />
    </div>
    <div
      class="card__content flex flex-col gap-8 w-full"
    >
      <div
        class="card__text"
      >
        <h2
          class="card__title text-2xl font-semibold text-bluedot-darker"
        >
          John Doe
        </h2>
        <p
          class="card__subtitle text-base text-black"
        >
          Developer
        </p>
      </div>
      <a
        class="cta-button flex items-center justify-center rounded-lg transition-all duration-200 font-semibold text-base px-4 py-2 w-fit cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter"
        data-testid="cta-link"
        href="https://linkedin.com/in/johndoe"
      >
        <span
          class="cta-button__text"
        >
          LinkedIn
        </span>
      </a>
    </div>
  </div>
</div>
`;
